# chefe

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  chefe.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  crowdin.yml  docs.yml  publish.yml  release.yml  translate.yml
docs/: commands.es.md  commands.ja-JP.md  commands.ja.md  commands.md  commands.pt-BR.md  commands.zh.md  examples.es.md  examples.ja.md  examples.md  examples.pt-BR.md  examples.zh.md  how-it-works.es.md  how-it-works.ja.md  how-it-works.md  how-it-works.pt-BR.md  how-it-works.zh.md  index.es.md  index.ja.md  index.md  index.pt-BR.md  index.zh.md  install.sh  manifest.es.md  manifest.ja.md  manifest.md  manifest.pt-BR.md  manifest.zh.md
docs/hooks/: llms.py
docs/stylesheets/: brand.css  extra.css
i18n/: glossary.csv
saci/: cli.py
saci/models/: __init__.py  base.py  manifest.py  npm.py  pixi.py
scripts/: make-banner.sh
site/: 404.html  index.html  llms-full.txt  llms.txt  sitemap.xml
site/commands/: index.html
site/es/: index.html
site/es/commands/: index.html
site/es/examples/: index.html
site/es/how-it-works/: index.html
site/es/manifest/: index.html
site/examples/: index.html
site/how-it-works/: index.html
site/ja/: index.html
site/ja/commands/: index.html
site/ja/examples/: index.html
site/ja/how-it-works/: index.html
site/ja/manifest/: index.html
site/manifest/: index.html
site/pt-BR/: index.html
site/pt-BR/commands/: index.html
site/pt-BR/examples/: index.html
site/pt-BR/how-it-works/: index.html
site/pt-BR/manifest/: index.html
site/search/: search_index.json
site/zh/: index.html
site/zh/commands/: index.html
site/zh/examples/: index.html
site/zh/how-it-works/: index.html
site/zh/manifest/: index.html
src/chefe/: __init__.py  base.py  cli.py  console.py  environment.py  errors.py  global_env.py  manager.py  state.py  tree_report.py  utils.py
src/chefe/backends/: __init__.py  cargo.py  npm.py  pixi.py  tool.py
src/chefe/compiled/: __init__.py  npm.py  pixi.py
src/chefe/manifest/: __init__.py  document.py  pyproject.py  schema.py
src/chefe/templates/: activate.sh.j2
tests/: conftest.py  strategies.py  test_backends.py  test_cli.py  test_compile.py  test_console.py  test_document.py  test_environment.py  test_models.py  test_pyproject.py  test_stateful.py  test_workspace.py
tests/__snapshots__/: test_compile.ambr
