[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chefe"
version = "0.0.19"
description = "One manifest for every package manager | conda, Python, Node.js, Rust & more, behind a single file."
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
authors = [{ name = "Pedro Valois", email = "contact@phvv.me" }]
keywords = [
  "package-manager",
  "pixi",
  "conda",
  "python",
  "cargo",
  "npm",
  "monorepo",
  "polyglot",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Software Distribution",
]
dependencies = [
  "cyclopts>=4",
  "pydantic>=2.13",
  "tomlkit>=0.13",
  "packaging>=24",
  "plumbum>=2",
  "rich>=13",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pyrefly>=1",
  "mypy>=1.11",
  "pytest>=8",
  "hypothesis>=6.100",
  "pytest-cov>=5",
  "syrupy>=4",
  "pytest-subprocess>=1.5",
  "pytest-mock>=3.14",
  "faker>=30",
  "dirty-equals>=0.8",
]
docs = ["mkdocs-material>=9.5", "mkdocs-static-i18n>=1.2"]

[project.scripts]
chefe = "chefe.cli:app"

[project.urls]
Homepage = "https://phvv.me/chefe"
Documentation = "https://phvv.me/chefe"
Repository = "https://github.com/phvv-me/chefe"
Issues = "https://github.com/phvv-me/chefe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/chefe"]

[tool.ruff]
line-length = 99
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_any_explicit = true
plugins = ["pydantic.mypy"]
files = ["src"]
mypy_path = "src"
namespace_packages = false

[tool.pydantic-mypy]
# Type the synthesized `__init__` from declared fields so plain models don't fall back to `Any`.
init_typed = true

# `extra="allow"` models (FlexModel and its subclasses) accept arbitrary unknown keys we forward
# verbatim to pixi/uv, so the pydantic plugin must synthesize `__init__(self, **data: Any)` for
# them. That `Any` is plugin-generated, not in our source, and is irreducible because the extras
# are untyped by design. We scope the `explicit-any` waiver to exactly the modules that define
# such models, keeping the global ban in force everywhere else.
[[tool.mypy.overrides]]
module = ["chefe.base", "chefe.manifest.schema", "chefe.compiled.npm"]
disable_error_code = ["explicit-any"]

[tool.pyrefly]
project-includes = ["src/**/*.py"]

[tool.pytest.ini_options]
addopts = "-q -ra --strict-markers --cov=chefe --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["chefe"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\.\\.\\.",
]

[dependency-groups]
dev = [
    "inline-snapshot>=0.34.1",
]
